cmake_minimum_required (VERSION 2.8)
option(BUILD_CUDA_EXAMPLE "Build example module derived from cuda SDK dct8x8" ON)
if(BUILD_CUDA_EXAMPLE)
  add_subdirectory(dct8x8)
endif()
option(BUILD_ECHO_MODULE "Build a module that returns input back" ON)
if(BUILD_ECHO_MODULE)
  add_subdirectory(echo)
endif()
option(BUILD_UTIL_EXAMPLE "Build a module that resets device on exit and has a client that can send all " ON)
if(BUILD_UTIL_EXAMPLE)
  add_subdirectory(util)
endif()
