cmake_minimum_required (VERSION 2.8)
# find_package(CUDA REQUIRED)
# set(CUDA_VERBOSE_BUILD ON)
# include_directories(${CUDA_TOOLKIT_ROOT_DIR}/samples/common/inc)
# set(nvccExtraFlags -Xcompiler=-fPIC -O2 -g; -Xlinker=-fPIC -g; -lineinfo; -std=c++11 )
# set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_20,code=sm_20;-gencode arch=compute_20,code=sm_21;-gencode arch=compute_30,code=sm_30;-gencode arch=compute_35,code=sm_35;-shared;${nvccExtraFlags})
# CUDA_ADD_LIBRARY(UtilModule SHARED UtilModule.cxx)
add_executable(UtilClient UtilClient.cxx)
set_target_properties(UtilClient PROPERTIES COMPILE_FLAGS " -I${YAMPL_INCLUDE_DIRS} ")
#target_link_libraries(UtilModule APEContainer APEUtils APEConfig rt )
target_link_libraries(UtilClient APEContainer APEConfig ${YAMPL_LIBRARIES} rt uuid)
#install(TARGETS UtilModule DESTINATION lib)
install(TARGETS UtilClient DESTINATION bin)
